# publisher

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SUPPORT.md  TS_MIGRATION_PLAN.md  changelog.html  collaboration.html  configuration.html  cover.out  go.mod  go.sum  index.html  install-publisher.bash  install.bash  install.sh  justfile  justfile.backup  mkdocs.yml  notes.md  package-lock.json  package.json  search.json  sitemap.xml  troubleshooting.html  vscode.html
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: post-commit  post-rewrite  pre-commit
docs/: _prerender.sh  _quarto.yml  cli.md  collaboration.md  configuration.md  contributing.md  generate-llms-txt.py  index.md  installation.md  justfile  licenses.md  llms-full.txt  llms.txt  lychee.toml  release-automation-proposal.md  troubleshooting.md  ui.md  vscode.md
extensions/jupyter-notebook/: .gitignore  MANIFEST.in  Makefile  README.md  Untitled.ipynb  justfile  package.json  pyproject.toml  setup.cfg  version.py
extensions/jupyter-notebook/connect_jupyternb/: __init__.py
extensions/jupyter-notebook/connect_jupyternb/static/: index.js  main.css
extensions/jupyter-notebook/connect_jupyternb/tests/: test_connect_jupyternb.py
extensions/jupyter-notebook/connect_publishing/: __init__.py
extensions/jupyter-notebook/connect_publishing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extensions/jupyter-notebook/connect_publishing/static/: connect.js  index.js  rsconnect.js
extensions/jupyterlab/connect_jupyterlab/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  conftest.py  install.json  junit.xml  justfile  package.json  pyproject.toml
extensions/jupyterlab/connect_jupyterlab/.github/workflows/: README.md  build.yml  check-release.yml
extensions/jupyterlab/connect_jupyterlab/connect_jupyterlab/: __init__.py  handlers.py
extensions/jupyterlab/connect_jupyterlab/connect_jupyterlab/tests/: __init__.py  test_handlers.py  test_init.py
extensions/jupyterlab/connect_jupyterlab/jupyter-config/server-config/: connect_jupyterlab.json
extensions/jupyterlab/connect_jupyterlab/notebooks/: Add.ipynb  Untitled.ipynb  bash.ipynb
extensions/jupyterlab/connect_jupyterlab/schema/: plugin.json
extensions/jupyterlab/connect_jupyterlab/src/: handler.ts  index.ts  kernel.ts
extensions/jupyterlab/connect_jupyterlab/src/__tests__/: connect_jupyterlab.spec.ts
extensions/jupyterlab/connect_jupyterlab/style/: base.css
extensions/jupyterlab/connect_jupyterlab/ui-tests/: README.md  package.json
extensions/jupyterlab/connect_jupyterlab/ui-tests/tests/: connect_jupyterlab.spec.ts
internal/: application.go  connect_client.go
kevin/: test.py
schema/: deploy.json  deploy.toml  deploy.yml  example.json  posit-publishing-record-schema-v3.json  posit-publishing-schema-v3.json  record.json  record.toml
scripts/: README.md  archive.bash  audit_gha_security.py  build.bash  ccheck.config  ccheck.py  coverage-report.bash  detect-code-changes.py  fmt-check.bash  fmt-check.sh  generate_llms_txt.py  get-archive-path.bash  get-executable-path.bash  get-go-checksum.bash  get-platforms.bash  get-version.bash  get-vscode-extension-path.bash  is-pre-release.bash  licenses.py  package.bash  prepare-release.bash  prepare-release.py  release.bash  stub.bash  test_audit_gha_security.py  test_detect_code_changes.py  test_generate_llms_txt.py  test_licenses.py  test_prepare_release.py  upload.bash
smoke-test-content/: README.md
ui/: .pnp.cjs  (+6 more)
(+2842 files in other folders)
