[bdist_wheel]
universal = 1

[metadata]
author = Isabel Zimmerman
author_email = isabel.zimmerman@posit.co
description = Posit Connect publishing client UI
license = GPL-2.0
license_files = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
name = connect-publishing
url = http://github.com/rstudio/publishing-client


[options]
install_requires =
    rsconnect-python>=1.15.0
    notebook>=6.1.5,<7.0.0
    nbformat
    nbconvert>=5.6.1
    six
    ipython
setup_requires =
    setuptools
packages = connect_publishing
python_requires = >=3.7
include_package_data = true
zip_safe = false

[options.extras_require]
test =
    black
    pytest